Correccion de logs y logica de pacientes activos/inactivos